--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
-  "name": "crypto-tools",
-  "version": "0.0.1",
-  "main": "index.js",
+  "name": "common-crypto-tools",
+  "version": "0.2.2",
   "repository": "https://github.com/dmitrytarassov/crypto-tools.git",
-  "author": "Dmitriy Tarasov <dm.tarassov@yandex.ru>",
+  "author": "Dmitriy Tarasov <meowbl@icloud.com>",
   "license": "MIT",
   "private": false,
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "build": "tsup"
+  },
   "dependencies": {
+    "@polkadot/api": "^10.12.4",
+    "@polkadot/types": "^10.12.4",
     "@types/express": "^4.17.21",
     "@types/supertest": "^6.0.2",
     "ts-node": "10.9.2",
@@ -14,6 +24,7 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
+    "@microsoft/api-extractor": "^7.43.0",
     "@types/node": "^20",
     "@types/sha256": "^0.2.2",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
@@ -32,6 +43,7 @@
     "eslint-plugin-standard": "4.0.1",
     "jest": "^29.5.0",
     "prettier": "^2.8.8",
-    "ts-jest": "^29.1.0"
+    "ts-jest": "^29.1.0",
+    "tsup": "^8.0.2"
   }
 }
