--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,5 @@
     "experimentalDecorators": true,
     "strictPropertyInitialization": false
   },
-  "include": ["./src/*.ts", "./src/**/*.ts", "./tests/*.ts", "./tests/**/*.ts"]
+  "include": ["./src/*.ts", "./src/**/*.ts", "./tests/*.ts", "./tests/**/*.ts", "tsup.config.ts"]
 }
