--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "common-crypto-tools",
-  "version": "0.2.3",
+  "version": "0.2.5",
   "repository": "https://github.com/dmitrytarassov/crypto-tools.git",
   "author": "Dmitriy Tarasov <meowbl@icloud.com>",
   "license": "MIT",
@@ -18,6 +18,7 @@
   "dependencies": {
     "@polkadot/api": "^10.12.4",
     "@polkadot/types": "^10.12.4",
+    "@polkadot/util-crypto": "^12.6.2",
     "@types/express": "^4.17.21",
     "@types/supertest": "^6.0.2",
     "ts-node": "10.9.2",
