--- a/package.json
+++ b/package.json
@@ -1,22 +1,15 @@
 {
   "keywords": ["web3", "polkadot", "crypto"],
   "name": "common-crypto-tools",
-  "version": "0.2.8",
+  "version": "0.2.12",
   "repository": "https://github.com/dmitrytarassov/crypto-tools.git",
   "author": "Dmitriy Tarasov <meowbl@icloud.com>",
   "license": "MIT",
   "private": false,
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "main": "./index.ts",
   "files": [
-    "dist",
-    "dist/polkadot"
+    "./"
   ],
-  "exports": {
-    "./polkadot": "./dist/polkadot/index.js",
-    ".": "./dist/index.js"
-  },
   "scripts": {
     "build": "tsup"
   },
