--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "keywords": ["web3", "polkadot", "crypto"],
   "name": "common-crypto-tools",
-  "version": "0.2.12",
+  "version": "0.2.14",
   "repository": "https://github.com/dmitrytarassov/crypto-tools.git",
   "author": "Dmitriy Tarasov <meowbl@icloud.com>",
   "license": "MIT",
@@ -19,6 +19,7 @@
     "@polkadot/util-crypto": "^12.6.2",
     "@types/express": "^4.17.21",
     "@types/supertest": "^6.0.2",
+    "ethers": "^5.7.2",
     "ts-node": "10.9.2",
     "typescript": "5.3.3"
   },
