--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "keywords": ["web3", "polkadot", "crypto"],
+  "keywords": [
+    "web3",
+    "polkadot",
+    "crypto"
+  ],
   "name": "common-crypto-tools",
-  "version": "0.2.14",
+  "version": "0.3.0",
   "repository": "https://github.com/dmitrytarassov/crypto-tools.git",
   "author": "Dmitriy Tarasov <meowbl@icloud.com>",
   "license": "MIT",
@@ -11,7 +15,8 @@
     "./"
   ],
   "scripts": {
-    "build": "tsup"
+    "build": "tsup",
+    "test": "jest"
   },
   "dependencies": {
     "@polkadot/api": "^10.12.4",
@@ -30,6 +35,7 @@
     "@types/sha256": "^0.2.2",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
+    "dotenv": "^16.4.5",
     "eslint": "^8.40.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
