--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "keywords": [
     "web3",
     "polkadot",
-    "crypto"
+    "crypto",
+    "eigenlayer"
   ],
   "name": "common-crypto-tools",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "repository": "https://github.com/dmitrytarassov/crypto-tools.git",
   "author": "Dmitriy Tarasov <meowbl@icloud.com>",
   "license": "MIT",
@@ -16,6 +17,7 @@
   ],
   "scripts": {
     "build": "tsup",
+    "generate:types:v5:DelegationManager": "typechain --target ethers-v5 --out-dir src/eigenlayer/contracts/typechain/ethers-v5/DelegationManager/ src/eigenlayer/contracts/abi/DelegationManager.json",
     "test": "jest"
   },
   "dependencies": {
@@ -31,6 +33,7 @@
   "devDependencies": {
     "@jest/globals": "^29.5.0",
     "@microsoft/api-extractor": "^7.43.0",
+    "@typechain/ethers-v5": "^11.1.2",
     "@types/node": "^20",
     "@types/sha256": "^0.2.2",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
@@ -50,6 +53,7 @@
     "eslint-plugin-standard": "4.0.1",
     "jest": "^29.5.0",
     "prettier": "^2.8.8",
+    "typechain": "^8.3.2",
     "ts-jest": "^29.1.0",
     "tsup": "^8.0.2"
   }
