--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -1,4 +1,7 @@
 name: 'coverage'
+env:
+  ALCHEMY_PRIVATE_KEY: ${{ secrets.ALCHEMY_PRIVATE_KEY }}
+  RPC_URL_POLKADOT: ${{ secrets.RPC_URL_POLKADOT }}
 on:
   push:
     branches:
