--- a/packages/polkadot-typed-api/package.json
+++ b/packages/polkadot-typed-api/package.json
@@ -7,7 +7,7 @@
   ],
   "name": "polkadot-typed-api",
   "main": "src/index.ts",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "",
   "repository": "https://github.com/dmitrytarassov/crypto-tools.git",
   "author": "Dmitriy Tarasov <meowbl@icloud.com>",
@@ -22,6 +22,27 @@
   },
   "devDependencies": {
     "@polkadot/api": "^13.0.1",
+    "@jest/globals": "^29.5.0",
+    "@types/jsdom": "^21.1.7",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
+    "dotenv": "^16.4.5",
+    "eslint": "^8.40.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-next": "13.5.2",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-config-standard": "14.1.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-standard": "4.0.1",
+    "jest": "^29.7.0",
+    "jsdom": "^24.1.1",
+    "prettier": "^2.8.8",
+    "ts-jest": "^29.2.4",
     "tsup": "^8.2.4"
   },
   "dependencies": {
