--- a/packages/common-crypto-tools/package.json
+++ b/packages/common-crypto-tools/package.json
@@ -6,7 +6,7 @@
     "crypto"
   ],
   "name": "common-crypto-tools",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "repository": "https://github.com/dmitrytarassov/crypto-tools.git",
   "author": "Dmitriy Tarasov <meowbl@icloud.com>",
   "license": "MIT",
@@ -17,7 +17,6 @@
   ],
   "scripts": {
     "build": "tsup",
-    "generate:types:v5:DelegationManager": "typechain --target ethers-v5 --out-dir src/eigenlayer/contracts/typechain/ethers-v5/DelegationManager/ src/eigenlayer/contracts/abi/DelegationManager.json",
     "test": "jest --coverage"
   },
   "dependencies": {
@@ -25,6 +24,12 @@
     "ethers": "^5.7.2"
   },
   "devDependencies": {
-    "@typechain/ethers-v5": "^11.1.2"
+    "@jest/globals": "^29.7.0",
+    "@typechain/ethers-v5": "^11.1.2",
+    "eslint-config-the-only-perfect": "^1.3.8",
+    "jest": "^29.7.0",
+    "tsup": "^8.2.4",
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.7.3"
   }
 }
