--- a/packages/common-crypto-tools/tsconfig.json
+++ b/packages/common-crypto-tools/tsconfig.json
@@ -1,15 +1,32 @@
 {
-  "extends": "../../tsconfig.json",
+  "ts-node": {
+    "esm": true,
+    "experimentalSpecifierResolution": "node"
+  },
   "compilerOptions": {
-    "paths": {
-      "@polkadotTypes/*": ["./src/types/*"]
-    }
+    "strict": true,
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "module": "ESNext",
+    "lib": ["ESNext", "DOM"],
+    "target": "ESNext",
+    "baseUrl": ".",
+    "allowJs": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "incremental": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "strictPropertyInitialization": false
   },
   "include": [
-    "./src/*.ts",
-    "./src/**/*.ts",
-    "./types/*.ts",
-    "./types/**/*.ts",
+    "src/*.ts",
+    "src/**/*.ts",
     "tsup.config.ts"
   ]
 }
